ghc-4335c07/testsuite/tests/indexed-types/should_fail/T7102a.script
:set -XTypeFamilies
type family A a
type instance A Int = ()
type instance A Int = Bool
